--- a/style.css
+++ b/style.css
@@ -302,7 +302,7 @@ body {
         overflow-x: hidden;
     }
     .download-btn {
-        font-size: 10px;
+        font-size: 15px;
     }
 /*Nav*/
     .topnav a {
@@ -318,7 +318,7 @@ body {
     }
     .card-container-1 {
    font-size: 20px;
-   display: block;
+   height: 10%;
 
     }
     .section-3 {
@@ -326,26 +326,23 @@ body {
         margin: 25px;
     }
     .card-container-2 {
-       display: none;
-    
+      display: none;
     }
     .card-container-3 {
-    
-        margin: 25px;
         display: block;
+        height: 5%;
     }
     .card-container-4 {
-      
-        margin: 25px;
+        height: 5%;
         display: block;
     }
     .card-container-5 {
-
         display: block;
+        height: 5%;
     }
     .card-container-6 {
-
         display: block;
+        height: 5%;
     } 
     .card-container-7 {
         display: none;
@@ -353,7 +350,14 @@ body {
     .card-container-8 {
         display: none;
     }
+
+    .p1, .p2, .p3, .p4, .p5, .ar1, .ar2, .ar3, .info, .picture, .ss{
+        height: 15%;
+    }
     
+    .pic1 {
+        display: none;
+    }
  /*Text*/
 
     .o1 {
@@ -374,8 +378,7 @@ body {
     }
 
     .text1 {
-        font-size: 10px;
-       text-align: left;
+        font-size: 15px;
     }
 
     .info {
@@ -397,10 +400,6 @@ body {
   padding: 1px;
   justify-content: center;
 }
-.card-container-1 img{
-    width: 30%;
-    padding: 10px;
-  }
 
   .esbjerg, .halloween, .france{
     max-width: 25%;
@@ -412,5 +411,6 @@ body {
 
 .artwork1, .artwork2, .artwork3{
     max-width: 20%;
-  }
+  } 
+
 }
